--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,10 @@
 	width: 6px;
 }
 
+body {
+	background-color: white;
+}
+
 .custom-scrollbar::-webkit-scrollbar-thumb {
 	background-color: rgba(100, 116, 139, 0.7);
 	border-radius: 3px;
